TETO-35 Frontend 링크 연결및페이징 디자인 추가

--- a/frontend/user/src/pages/mainpage/Main.module.css
+++ b/frontend/user/src/pages/mainpage/Main.module.css
@@ -203,6 +203,12 @@
     cursor: not-allowed;
 }
 
+.noUnderline {
+    text-decoration: none;
+    color: inherit;
+}
+
+
 /* Responsive */
 @media (max-width: 768px) {
     .headerContent {
